# vm-telegram-alerts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  TODO.md  docker-compose.yml  docker-compose.yml.example
.github/workflows/: build.yml  docker_deploy.yml
src/: config.rs  main.rs
src/alerts/: chart.rs  config.rs  mod.rs  notifier.rs
src/bot/: config.rs  mod.rs
src/db/: alert_state.rs  config.rs  mod.rs  user.rs
src/util/: expiring_map.rs  mod.rs
