[package]
name = "vm-telegram-alerts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
# Common
anyhow = "^1.0.45"
dotenv = "^0.15.0"
lazy_static = "1.4.0"
tokio = { version = "^1.13.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "^0.11.6", features = ["blocking", "json"] }
json = "^0.12.4"
serde = "^1.0.130"
serde_derive = "^1.0.126"
serde_json = "^1.0.68"
serde_yaml = "^0.8.21"
chrono = "^0.4.19"

# DB
mongodb = "^2.0.1"
bson = "^2.0.1"
futures-util = "^0.3.17"

# Bot
teloxide = { version = "^0.5.0", features = ["macros", "auto-send"] }
log = "^0.4"
pretty_env_logger = "^0.4.0"

# Charts
plotters = "^0.3.1"
tempfile = "^3.2.0"
